--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -19,9 +19,6 @@ body {
 .alt-color {
   color: #5f021f;
 }
-.light-blue-background {
-  background-color: #b9f2ff;
-}
 .note {
   font-size: 0.8em;
 }
@@ -37,7 +34,8 @@ body {
   margin-bottom: 0;
 }
 .basic-list {
-  list-style-type: circle;
+  list-style-type: none;
+  padding-left: 0;
 }
 .basic-list li {
   margin-bottom: 5px;
@@ -73,6 +71,24 @@ li.list-margin {
 .bold {
   font-weight: bold;
 }
+.btn {
+  font-size: 100%;
+}
+.dfk-btn-link {
+  width: 100%;
+  text-align: left;
+  border-radius: 4px;
+  padding: 10px 15px;
+  color: #555;
+}
+.dfk-btn-link:hover {
+  text-decoration: none;
+  background-color: #eee;
+  color: #000;
+}
+.bootstrap-select {
+  width: 100% !important;
+}
 /* Competition page */
 /*==================*/
 .competition-menu {
@@ -88,11 +104,45 @@ li.list-margin {
   float: left;
 }
 .lanes-select {
-  margin-bottom: 40px;
-  clear: both;
+  width: 100%;
+  height: 30px;
+  border-radius: 3px;
+  background: #fff;
 }
 .ages-select {
   margin-left: 10px;
+}
+.inline-form {
+  display: inline-block;
+  width: 100%;
+}
+.inline-form .fields {
+  margin-bottom: 20px;
+}
+.btns-wrapper {
+  width: 50%;
+  margin: 0 auto;
+}
+.dfk-tabs-content {
+  min-height: 400px;
+  border-right: 1px solid #eee;
+  margin-bottom: 30px;
+}
+.dfk-tabs-content .nav-tabs {
+  margin-bottom: 30px;
+}
+.dfk-tabs-content .tab-content {
+  max-height: 500px;
+  overflow: auto;
+}
+.nav-item a {
+  color: #555;
+}
+.nav-item a:hover {
+  color: #000;
+}
+.nav>li>a:focus {
+  background-color: #fff;
 }
 /* Forms       */
 /*=============*/
@@ -118,8 +168,8 @@ li.list-margin {
   top: 8px;
   color: #5f021f;
 }
-input.ng-invalid.ng-dirty,
-select.ng-invalid.ng-dirty {
+input .ng-invalid.ng-dirty,
+select .ng-invalid.ng-dirty {
   border-color: #5f021f;
   box-shadow: 0 0 8px #5f021f;
   -webkit-transition: none;
@@ -169,7 +219,7 @@ select.ng-invalid.ng-dirty {
   table-layout: fixed;
 }
 .single-start-container {
-  padding: 15px 0 15px;
+  padding: 15px 0;
   overflow: hidden;
   border-bottom: 1px solid #979a9d;
 }
