--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -37,7 +37,7 @@
               <th class="text-center">Команда</th>
               <th class="text-center">Тренер</th>
               {% if user.is_authenticated %}
-                <th class="text-center">Подтверджено</th>
+                <th class="text-center">Подтверждено</th>
               {% endif %}
             </tr>
           </thead>
