--- a/pgups/templates/pgups/competition_relays.html
+++ b/pgups/templates/pgups/competition_relays.html
@@ -4,7 +4,15 @@
 
   <!-- HEADING -->
   <div class="heading">
-    <h1><b>{{competition.name}}. Эстафеты</b></h2>
+    <h1>{{competition.name}}. Эстафеты</h1>
   </div>
+
+<div>
+    <ul>
+    {% for relay in relay_list %}
+    <li><a href="/relay_teams/{{ relay.id }}/">{{relay}}</a> </li>
+    {% endfor %}
+    </ul>
+</div>
 
 {% endblock %}
