--- a/pgups/templates/pgups/results_teams.html
+++ b/pgups/templates/pgups/results_teams.html
@@ -14,17 +14,31 @@
 	<div class="row">
 		<div class="col-lg-6 col-md-7 col-sm-8 col-xs-10">
 
-			<table class="table table-striped table-hover table-bordered">
+            <table class="table table-striped table-hover table-bordered">
 				<tbody>
-				{% for res in result_list %}
-					{{result_form.id}}
+				{% for k,v in result_dict.items %}
 					<tr>
-						<td class="column-name-wide">{{res.0}}</td>
-						<td class="column-result-wide">{{res.1}}</td>
+						<td class="column-name-wide">{{k}}</td>
+						<td class="column-result-wide">{{v.total}}</td>
+                        <td class="column-name-wide">
+                            {% for c in v.competitors %}
+                            {{c.person.last_name}} {{c.person.first_name}}
+                            {{c.tour}} {{c.result}} {{c.points}} <br>
+                            {% endfor %}
+                            <hr>
+                            {% for c in v.relay_competitors %}
+                            {{c.name}}
+                            {{c.tour}} {{c.result}} {{c.points}} <br>
+                            {% endfor %}
+                        </td>
 					</tr>
 				{% endfor %}
 				</tbody>
 			</table>
+
+			<p>
+				{{result_dict}}
+			</p>
 
 		</div>
 	</div>
