--- a/pgups/templates/pgups/results_tours.html
+++ b/pgups/templates/pgups/results_tours.html
@@ -54,8 +54,8 @@
 						<ul class="basic-list">
 							{% for c in result.2 %}
 								<li class="alt-color">
-									{{c.0.person.last_name|title}} {{c.0.person.first_name|title}} ({{c.1}}{% if
-									c.0.time > 0 %}, {{c.0.time|formatSeconds}}{% endif %})
+									{{c.0.person.last_name|title}} {{c.0.person.first_name|title}}
+                                    ({{c.1}}{% if c.0.time > 0 %}, {{c.0.time|formatSeconds}} {% endif %})
 								</li>
 							{% endfor %}
 						</ul>
