Верстка страницы результатов команд

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -15,6 +15,7 @@
 	<link href="{% static 'libs/css/jquery-ui.min.css' %}" rel="stylesheet"> <!-- jQueryUI CSS -->
 	<link href="{% static 'libs/css/notie.css' %}" rel="stylesheet"> <!-- Notie CSS -->
 	<link href="{% static 'css/main.css' %}" rel="stylesheet"> <!-- Main CSS -->
+	<link href="{% static 'css/temp.css' %}" rel="stylesheet">
 
 	<script src="{% static 'libs/js/jquery.min.js' %}"></script> <!-- jQuery core -->
 	<script src="{% static 'libs/js/jquery-ui.min.js' %}"></script> <!-- jQueryUI -->
