Добавление команд в эстафеты

--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -12,10 +12,10 @@
 		<!-- Container -->
 		<div class="container">
 
-			<!-- DEBUG -->
+			<!-- DEBUG
 			<input type="checkbox" ng-model="showDebugData" id="debug"><label for="debug"> DEBUG: показать данные</label>
 			<pre ng-show="showDebugData">{$ $ctrl.data | json $}</pre>
-			<!-- DEBUG -->
+			DEBUG -->
 
 			<form name="creationForm" class="form-horizontal" role="form" novalidate> <!-- creationForm -->
 
